# zcene

./: .gitignore  Cargo.toml  Makefile.toml  README.md
zcene-bare-metal/: Cargo.toml  x86_64.json
zcene-bare-metal/src/: lib.rs  main.rs
zcene-bare-metal/src/architecture/: stack.rs
zcene-bare-metal/src/common/: mod.rs
zcene-bare-metal/src/driver/: mod.rs
zcene-bare-metal/src/kernel/: kernel.rs  kernel_configuration.rs  kernel_panic_handler.rs  kernel_timer.rs  mod.rs
zcene-bare-metal/src/memory/: mod.rs
zcene-bare-metal/src/synchronization/: mod.rs
zcene-bare-metal/src/time/: mod.rs  timer_instant.rs
zcene-bare-x86_64/: Cargo.toml  linker.ld  x86_64.json
zcene-bare-x86_64/src/: global_allocator.rs  logger.rs  main.rs  panic_handler.rs
zcene-bare-x86_64/src/actor/: actor_handler.rs  actor_thread.rs  actor_thread_scheduler.rs  mod.rs
zcene-bare-x86_64/src/architecture/: stack.rs
zcene-bare-x86_64/src/common/: mod.rs
zcene-bare-x86_64/src/entry_point/: application_processor_entry_point.rs  bootstrap_processor_entry_point.rs  double_fault_entry_point.rs  mod.rs  page_fault_entry_point.rs  unhandled_interrupt_entry_point.rs
zcene-bare-x86_64/src/kernel/: kernel.rs  kernel_global_allocator.rs  kernel_interrupt_manager.rs  kernel_logger.rs  kernel_timer.rs  mod.rs
zcene-bare-x86_64/src/memory/: memory_manager.rs
zcene-bare-x86_64/src/user/: mod.rs
zcene-core/: Cargo.toml
zcene-core/src/: actor.rs  actor_address.rs  actor_address_reference.rs  actor_allocator.rs  actor_box_future.rs  actor_common_bounds.rs  actor_context_message_provider.rs  actor_future.rs  actor_handle_error.rs  actor_handler.rs  actor_mailbox.rs  actor_message.rs  actor_message_sender.rs  actor_system.rs  actor_system_create_error.rs  actor_system_reference.rs  future_ext.rs  lib.rs
zcene-core/src/actor/: actor.rs  actor_address_ext.rs  actor_address_reference.rs  actor_allocator.rs  actor_box_future.rs  actor_context_message_provider.rs  actor_create_error.rs  actor_destroy_error.rs  actor_enterable.rs  actor_environment.rs  actor_handler.rs  actor_mailbox.rs  actor_mailbox_message_sender.rs  actor_message_channel.rs  actor_message_channel_address.rs  actor_message_sender.rs  actor_send_error.rs  actor_spawnable.rs  actor_spawner.rs  actor_system.rs  actor_system_reference.rs  inline_actor.rs  mod.rs
zcene-core/src/future/: future_ext.rs  mod.rs  no_operation_waker.rs  yield.rs
zcene-future-runtime/: Cargo.toml
zcene-future-runtime/src/: future_runtime.rs  future_runtime_actor_address.rs  future_runtime_actor_handler.rs  future_runtime_allocator.rs  future_runtime_box_future.rs  future_runtime_concurrent_queue.rs  future_runtime_continue_waker.rs  future_runtime_handler.rs  future_runtime_no_operation_yielder.rs  future_runtime_queue.rs  future_runtime_reference.rs  future_runtime_spawn_error.rs  future_runtime_task.rs  future_runtime_task_reference.rs  future_runtime_waker.rs  future_runtime_yielder.rs  lib.rs
zcene-kernel-x86_64/: Cargo.toml  build.rs  linker.ld  x86_64.json
zcene-kernel-x86_64/src/: global_allocator.rs  logger.rs  main.rs  timer.asm
zcene-kernel-x86_64/src/actor/: actor_handle_executor.rs  actor_handler.rs  actor_thread.rs  actor_thread_scheduler.rs  actor_thread_type.rs  mod.rs
zcene-kernel-x86_64/src/architecture/: frame_size.rs  mod.rs  stack.rs
zcene-kernel-x86_64/src/common/: memory_manager.rs  mod.rs  mutex.rs  x86.rs
zcene-kernel-x86_64/src/driver/: keyboard.rs  mod.rs
zcene-kernel-x86_64/src/entry_point/: application_processor_entry_point.rs  entry_point.rs  (+3 more)
(+351 files in other folders)
