[package]
name = "zcene-bare-metal"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = { version = "5" }
bootloader-x86_64-common = { branch = "update-uart", git = "https://github.com/Stazer/bootloader.git" }
bootloader_api = { branch = "update-uart", git = "https://github.com/Stazer/bootloader.git" }
linked_list_allocator = "*"
log = "*"
pc-keyboard = "*"
pic8259 = "*"
x2apic = "*"
x86 = "*"
x86_64 = { version = "0.15", features = ["abi_x86_interrupt", "instructions"] }
zcene-core = { path = "../zcene-core" }
spin = "*"
ztd = { git = "https://github.com/Stazer/ztd.git" }

[build-dependencies]
glob = "*"
