[package]
name = "zcene-future-runtime"
version = "0.0.0"
edition = "2024"

[dependencies]
zcene-core = { path = "../zcene-core" }
async-channel = { version = "2", default-features = false }
concurrent-queue = { version = "2", default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
spin = "*"
ztd = { git = "https://github.com/Stazer/ztd.git" }
